src/objects/Twilio_Call__c.object
<CustomObject>
    <fields>
        <fullName>AccountSid__c</fullName>
        <description>Your Twilio account id. It is 34 characters long, and always starts with the letters AC.</description>
        <inlineHelpText>Your Twilio account id. It is 34 characters long, and always starts with the letters AC.</inlineHelpText>
        <label>AccountSid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiVersion__c</fullName>
        <description>The version of the Twilio API used to handle this call. For incoming calls, this is determined by the API version set on the called number. For outgoing calls, this is the API version used by the outgoing call&apos;s REST API request.</description>
        <inlineHelpText>The version of the Twilio API used to handle this call. For incoming calls, this is determined by the API version set on the called number. For outgoing calls, this is the API version used by the outgoing call&apos;s REST API request.</inlineHelpText>
        <label>ApiVersion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDuration__c</fullName>
        <description>The duration in seconds of the just-completed call.</description>
        <inlineHelpText>The duration in seconds of the just-completed call.</inlineHelpText>
        <label>CallDuration</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallSid__c</fullName>
        <description>A unique identifier for this call, generated by Twilio.</description>
        <inlineHelpText>A unique identifier for this call, generated by Twilio.</inlineHelpText>
        <label>CallSid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallStatus__c</fullName>
        <description>A descriptive status for the call. The value is one of queued, ringing, in-progress, completed, busy, failed or no-answer. See the CallStatus section below for more details.</description>
        <inlineHelpText>A descriptive status for the call. The value is one of queued, ringing, in-progress, completed, busy, failed or no-answer. See the CallStatus section below for more details.</inlineHelpText>
        <label>CallStatus</label>
        <picklist>
            <picklistValues>
                <fullName>queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ringing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in-progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no-answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Called__c</fullName>
        <label>Called</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallerName__c</fullName>
        <description>This parameter is set when the IncomingPhoneNumber that received the call has had its VoiceCallerIdLookup value set to true (additional charges apply).</description>
        <inlineHelpText>This parameter is set when the IncomingPhoneNumber that received the call has had its VoiceCallerIdLookup value set to true (additional charges apply).</inlineHelpText>
        <label>CallerName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <label>Caller</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Conference_Bridge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conference Bridge</label>
        <referenceTo>Conference_Bridge__c</referenceTo>
        <relationshipLabel>Twilio Calls</relationshipLabel>
        <relationshipName>Twilio_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Twilio Calls</relationshipLabel>
        <relationshipName>Twilio_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost of the call.  Conference Cost per Minute * Duration.</description>
        <formula>IF ( ISNUMBER( Duration__c),  
    (Conference_Bridge__r.Cost_per_Minute__c * VALUE( Duration__c)) + Conference_Bridge__r.Fixed_Cost_per_Call__c, 
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost of the call.  Conference Cost per Minute * Duration.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Indicates the direction of the call. In most cases this will be inbound, but if you are using &lt;Dial&gt; it will be outbound-dial.</description>
        <inlineHelpText>Indicates the direction of the call. In most cases this will be inbound, but if you are using &lt;Dial&gt; it will be outbound-dial.</inlineHelpText>
        <label>Direction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of the call in Minutes</description>
        <inlineHelpText>Duration of the call in Minutes</inlineHelpText>
        <label>Duration</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForwardedFrom__c</fullName>
        <description>This parameter is set only when Twilio receives a forwarded call, but its value depends on the caller&apos;s carrier including information when forwarding. Not all carriers support passing this information.</description>
        <inlineHelpText>This parameter is set only when Twilio receives a forwarded call, but its value depends on the caller&apos;s carrier including information when forwarding. Not all carriers support passing this information.</inlineHelpText>
        <label>ForwardedFrom</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromCity__c</fullName>
        <description>The city of the caller.</description>
        <inlineHelpText>The city of the caller.</inlineHelpText>
        <label>FromCity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromCountry__c</fullName>
        <description>The country of the caller.</description>
        <inlineHelpText>The country of the caller.</inlineHelpText>
        <label>FromCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromState__c</fullName>
        <description>The state or province of the caller.</description>
        <inlineHelpText>The state or province of the caller.</inlineHelpText>
        <label>FromState</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromZip__c</fullName>
        <description>The postal code of the caller.</description>
        <inlineHelpText>The postal code of the caller.</inlineHelpText>
        <label>FromZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>The phone number or client identifier of the party that initiated the call. Phone numbers are formatted with a &apos;+&apos; and country code, e.g. +16175551212 (E.164 format). Client identifiers begin with the client: URI scheme; for example, for a call from a client named &apos;tommy&apos;, the From parameter will be client:tommy.</description>
        <inlineHelpText>The phone number or client identifier of the party that initiated the call.</inlineHelpText>
        <label>From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Determines if the caller is the host or the attendee</description>
        <inlineHelpText>Determines if the caller is the host or the attendee</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToCity__c</fullName>
        <description>The city of the called party.</description>
        <inlineHelpText>The city of the called party.</inlineHelpText>
        <label>ToCity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToCountry__c</fullName>
        <description>The country of the called party.</description>
        <inlineHelpText>The country of the called party.</inlineHelpText>
        <label>ToCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToState__c</fullName>
        <description>The state or province of the called party.</description>
        <inlineHelpText>The state or province of the called party.</inlineHelpText>
        <label>ToState</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToZip__c</fullName>
        <description>The postal code of the called party.</description>
        <inlineHelpText>The postal code of the called party.</inlineHelpText>
        <label>ToZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>The phone number or client identifier of the called party. Phone numbers are formatted with a &apos;+&apos; and country code, e.g. +16175551212 (E.164 format). Client identifiers begin with the client: URI scheme; for example, for a call to a client named &apos;jenny&apos;, the To parameter will be client:jenny.</description>
        <inlineHelpText>The phone number or client identifier of the called party.</inlineHelpText>
        <label>To</label>
        <type>Phone</type>
    </fields>
    <label>Twilio Call</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Called__c</columns>
        <columns>Caller__c</columns>
        <columns>CallerName__c</columns>
        <columns>Contact__c</columns>
        <columns>CallStatus__c</columns>
        <columns>CallDuration__c</columns>
        <columns>Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CallStatus__c</field>
            <operation>notEqual</operation>
            <value>completed</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Called__c</columns>
        <columns>Caller__c</columns>
        <columns>CallStatus__c</columns>
        <columns>Duration__c</columns>
        <columns>Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_0423</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Caller__c</columns>
        <columns>CallerName__c</columns>
        <columns>ApiVersion__c</columns>
        <columns>Called__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>4/23/2012 12:00 AM</value>
        </filters>
        <label>All 0423</label>
    </listViews>
    <listViews>
        <fullName>All_with_Cost</fullName>
        <columns>NAME</columns>
        <columns>Conference_Bridge__c</columns>
        <columns>Caller__c</columns>
        <columns>CallStatus__c</columns>
        <columns>Duration__c</columns>
        <columns>Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All with Cost</label>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Caller__c</columns>
        <columns>CallerName__c</columns>
        <columns>Contact__c</columns>
        <columns>CallDuration__c</columns>
        <columns>Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CallStatus__c</field>
            <operation>equals</operation>
            <value>completed</value>
        </filters>
        <label>Completed</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Call ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>